--- a/src/app/filters/components/search-recipies-filter/search-recipies-filter.component.scss
+++ b/src/app/filters/components/search-recipies-filter/search-recipies-filter.component.scss
@@ -1,5 +1,6 @@
 .searchbar {
     padding-inline: 0;
     --box-shadow: none;
-    --background: var(--ion-color-light)
+    --background: var(--ion-color-light);
+    width: min(60vw, 450px);
 }
