fixed action buttons style in calendar > editing

--- a/src/app/pages/calendar/components/add-comment-modal/add-comment-modal.component.html
+++ b/src/app/pages/calendar/components/add-comment-modal/add-comment-modal.component.html
@@ -1,4 +1,4 @@
-<ion-button [id]="'open-modal-comment' + meatime">Додати коментар</ion-button>
+<ion-button [id]="'open-modal-comment' + meatime"  class="trigger-btn">Додати коментар</ion-button>
 
 <ion-modal [trigger]="'open-modal-comment' + meatime">
     <ng-template>
