--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -1,4 +1,4 @@
-<ion-button [id]="'open-modal' + meatime">Додати страву</ion-button>
+<ion-button [id]="'open-modal' + meatime" class="trigger-btn">Додати страву</ion-button>
 
 <ion-modal
   [trigger]="'open-modal' + meatime"
