full screen width for admin section

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,8 @@
 .app-container {
-    max-width: 900px;
+    max-width: var(--app-width);
     margin-inline: auto;
+}
+
+ion-menu {
+    max-width: max-content;
 }
