--- a/src/global.scss
+++ b/src/global.scss
@@ -37,7 +37,8 @@
   --header-height: 0px;
   --ion-text-color: var(--ion-color-dark, #000);
   --ion-background-color: var(--ion-color-secondary);
-  --ion-font-family: "Roboto", sans-serif;  
+  --ion-font-family: "Roboto", sans-serif;
+  --app-width: 900px;
 }
 
 body {
