--- a/src/app/pages/admin/components/admin-table/admin-table.component.scss
+++ b/src/app/pages/admin/components/admin-table/admin-table.component.scss
@@ -19,6 +19,7 @@
     padding: 5px 10px;
     z-index: 1;
     font-size: 14px;
+    max-width: 200px;
     &:first-child {
       position: sticky;
       z-index: 3;
