display portion size info

--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -78,6 +78,7 @@
                   <span *ngIf="recipy.calorificValue"
                     >{{ Math.round(recipy.calorificValue) }} ккал в 100гр.</span
                   >
+                  <div *ngIf="recipy.portionSize">Рекомендований розмір порції: {{recipy.portionSize}}гр.</div>
                 </div>
               </div>
               <div class="recipy-photo" *ngIf="recipy.photo">
