--- a/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.html
+++ b/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.html
@@ -41,6 +41,7 @@
               {{ passivePreparationTime() | normalizeTime }}
             </span>
           </div>
+          <div *ngIf="recipy.portionSize">Рекомендований розмір порції: {{recipy.portionSize}}гр.</div>
         </div>
       </div>
       <div class="recipy-photo" *ngIf="recipy.photo">
