--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
@@ -25,6 +25,7 @@
           collection
           }}</ion-chip>
       </div>
+      <div *ngIf="recipy.portionSize">Рекомендований розмір порції: {{recipy.portionSize}}гр.</div>
     </ion-card-subtitle>
   </ion-card-header>
 
