--- a/src/global.scss
+++ b/src/global.scss
@@ -38,7 +38,7 @@
   --ion-text-color: var(--ion-color-dark, #000);
   --ion-background-color: var(--ion-color-secondary);
   --ion-font-family: "Roboto", sans-serif;
-  --app-width: 900px;
+  --app-width: 100vw;
 }
 
 body {
