--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,6 +12,9 @@
         </div>
       </div>
     </ion-title>
+    <ion-buttons *ngIf="!isDesktop" slot="end">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
   <ion-toolbar>
     <ion-buttons slot="start">
