--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -16,7 +16,7 @@
   --ion-color-secondary-rgb: 247, 255, 245;
   --ion-color-secondary-contrast: #000000;
   --ion-color-secondary-contrast-rgb: 0, 0, 0;
-  --ion-color-secondary-shade: #d9e0d8;
+  --ion-color-secondary-shade: #a1b29f;
   --ion-color-secondary-tint: #f8fff6;
 
   /** brighter than the background color **/
