--- a/src/app/shared/components/recipy-constructor/recipy-constructor.component.html
+++ b/src/app/shared/components/recipy-constructor/recipy-constructor.component.html
@@ -39,18 +39,13 @@
         >
           <ion-label>Виберіть теги</ion-label>
         </ion-item>
-        <div class="ion-padding" slot="content">
-          <ion-list>
-            <ion-item *ngFor="let tag of tags" (click)="onTagClicked(tag)">
-              <ion-label>{{ getTagsText(tag) }}</ion-label>
-              <ion-icon
-                *ngIf="selectedTags.includes(tag)"
-                slot="end"
-                name="checkmark-outline"
-              ></ion-icon>
-            </ion-item>
-          </ion-list>
+
+        <div class="chip-selection-list" slot="content">
+            <ion-chip *ngFor="let tag of tags" (click)="onTagClicked(tag)" [color]="selectedTags.includes(tag)? 'primary' : 'secondary'">
+              <span>{{ getTagsText(tag) }}</span>
+            </ion-chip>
         </div>
+
       </ion-accordion>
     </ion-accordion-group>
 
