--- a/src/app/shared/components/product-autocomplete/product-autocomplete.component.scss
+++ b/src/app/shared/components/product-autocomplete/product-autocomplete.component.scss
@@ -1,7 +1,19 @@
 .ng-autocomplete {
-    height: 300px;
-    width: 100%;    
-    overflow-y: auto;
+    height: auto;
+    width: 100%;
+    overflow-y: visible;
+}
+
+::ng-deep .ng-autocomplete.product-selected .autocomplete-container .input-container {
+    input {
+        background-color: var(--ion-color-tertiary);
+        color: var(--ion-color-text);
+        font-size: 16px;
+    }
+
+    .x i {
+        color: var(--ion-color-text);
+    }
 }
 
 ::ng-deep .ng-autocomplete .suggestions-container.is-visible {
