--- a/src/app/shared/components/recipy-constructor/add-ingredient/add-ingredient.component.scss
+++ b/src/app/shared/components/recipy-constructor/add-ingredient/add-ingredient.component.scss
@@ -1,4 +1,8 @@
 .ng-autocomplete {
-    width: 100%;    
+    width: 100%;
     overflow-y: auto;
+}
+
+.border-bottom {
+    border-bottom: 1px solid var(--ion-color-tertiary-shade);
 }
