--- a/src/app/filters/components/filters/filters.component.html
+++ b/src/app/filters/components/filters/filters.component.html
@@ -2,7 +2,7 @@
   <ion-icon slot="icon-only" name="filter-outline"></ion-icon>
 </ion-button>
 
-<ion-modal trigger="filters-modal" [initialBreakpoint]="0.5" [breakpoints]="[0, 0.5, 0.75]">
+<ion-modal trigger="filters-modal">
   <ng-template>
     <ion-header>
       <ion-toolbar>
@@ -50,16 +50,11 @@
             <ion-label>Пошук за типом страв</ion-label>
           </ion-item>
           <div class="ion-padding" slot="content">
-            <ion-list *ngIf="checkedTags$ | async">
-              <ion-item *ngFor="let tag of tags" (click)="onTagCheck(tag)">
-                <ion-label>{{ getTagsText(tag) }}</ion-label>
-                <ion-icon
-                  *ngIf="checkedTags.includes(tag)"
-                  slot="end"
-                  name="checkmark-outline"
-                ></ion-icon>
-              </ion-item>
-            </ion-list>
+            <div class="chip-selection-list" slot="content" *ngIf="checkedTags$ | async">
+              <ion-chip *ngFor="let tag of tags" (click)="onTagCheck(tag)" [color]="checkedTags.includes(tag)? 'primary' : 'secondary'">
+                <span>{{ getTagsText(tag) }}</span>
+              </ion-chip>
+          </div>
           </div>
         </ion-accordion>
       </ion-accordion-group>
