--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -1,13 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>user</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">user</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <p title>Профіль</p>
+</app-header>
+
+<ion-content>
+  tada
 </ion-content>
