improved portions modal for calendar > add recipy

--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -44,7 +44,7 @@
             detail="false"
             button
             *ngFor="let recipy of recipies$ | async"
-            (click)="onRecipyClicked(recipy.id)"
+            (click)="onRecipyClicked(recipy)"
           >
             <ion-label class="recipy-content">
               <div class="recipy-text">
