--- a/src/app/pages/user/components/generic-settings/generic-settings.component.html
+++ b/src/app/pages/user/components/generic-settings/generic-settings.component.html
@@ -16,14 +16,15 @@
           рекомендований розмір
           порції</label></ion-toggle>
     </ion-item>
-    <ion-item>
+    <!-- disabled since logic is not fully implemented -->
+    <ion-item *ngIf="false"> 
       <ion-toggle [checked]="this.preferences.isUsePersonalizedPortionSize"
         [disabled]="!(isUseIndividualPortionsEnabled$ | async)"
         (ionChange)="onToggled('isUsePersonalizedPortionSize', $event)"><label class="wrapped-label">Використовувати
           індивідуальні налаштування порції для членів сім'ї<span
             *ngIf="!(isUseIndividualPortionsEnabled$ | async)">*</span></label></ion-toggle>
     </ion-item>
-    <p *ngIf="!(isUseIndividualPortionsEnabled$ | async)" class="padding-inline footnote">* Щоб використовувати
+    <p *ngIf="!(isUseIndividualPortionsEnabled$ | async) && false" class="padding-inline footnote">* Щоб використовувати
       індивідуальні налаштування для членів сім'ї, потрібно вказати % від рекомендованої порції для кожного члена сім'ї
     </p>
   </ion-list>
