--- a/src/app/shared/components/dialogs/select-option-dialog/select-option-dialog.component.html
+++ b/src/app/shared/components/dialogs/select-option-dialog/select-option-dialog.component.html
@@ -18,9 +18,9 @@
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding">
-      <app-recipy-short-view [currentUser]="user$ | async" [recipy]="recipy"></app-recipy-short-view>
+      <app-recipy-short-view *ngIf="recipy" [currentUser]="user$ | async" [recipy]="recipy"></app-recipy-short-view>
 
-      <h5>Вкажіть кількість порцій:</h5>
+      <h5>{{(isUseDefaultPortionSettings$| async) ? 'Вкажіть' : 'Змінити'}} кількість порцій:</h5>
       <div class="amount-wrapper">
         <ion-button size="small" (click)="selectedPortionOption = selectedPortionOption - 1">
           <ion-icon slot="icon-only" name="remove"></ion-icon>
@@ -34,7 +34,7 @@
         </ion-button>
       </div>
       <div>
-        <h5>Вкажіть розмір порції</h5>
+        <h5>{{(isUseDefaultPortionSettings$| async) ? 'Вкажіть' : 'Змінити'}} розмір порції</h5>
         <div class="amount-wrapper">
           <ion-button size="small" (click)="amountPerPortion = amountPerPortion - 50">
             <ion-icon slot="icon-only" name="remove"></ion-icon>
