product preference chips in short recipy view

--- a/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
+++ b/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
@@ -10,6 +10,7 @@
       *ngFor="let recipy of (recipies$ |async)"
       [currentUser]="user$ | async"
       [recipy]="recipy"
+      [productPreferencesChips]="productChips"
     ></app-recipy-short-view>
   </div>
 
