--- a/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
+++ b/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
@@ -13,7 +13,8 @@ ion-card-subtitle {
   ion-icon {
     font-size: 16px;
   }
-  & > div {
+
+  &>div {
     margin-top: 8px;
   }
 }
@@ -38,33 +39,41 @@ ion-card-content {
   background-color: var(--ion-color-tertiary);
   padding: 10px;
   opacity: 0.9;
-  & > div:not(.ingredients-wrapper) {
+
+  .actions-pane {
+    position: absolute;
+    bottom: 5px;
+    width: calc(100% - 20px);
+    justify-content: space-evenly;
+    flex-direction: row-reverse;
+    opacity: 0;
+    transition: all 300ms ease-in-out;
+
+    &>ion-button {
+      flex-grow: 1;
+    }
+  }
+
+  .overlay-flex-container {
+    gap: 20px;
+    display: flex;
+  }
+
+  .overlay-row {
     margin-bottom: 5px;
     display: flex;
     align-items: center;
     font-size: 10px;
     line-height: 1.2;
+
     ion-icon {
       margin-right: 5px;
-    }
-
-    &.actions-pane {
-      position: absolute;
-      bottom: 5px;
-      width: calc(100% - 20px);
-      justify-content: space-evenly;
-      flex-direction: row-reverse;
-      opacity: 0;
-      transition: all 300ms ease-in-out;
-
-      & > ion-button {
-        flex-grow: 1;
-      }
     }
   }
 
   .time {
     gap: 20px;
+
     ion-icon {
       margin-right: 0;
     }
@@ -81,8 +90,9 @@ ion-card-content {
       }
     }
 
-    & > div.actions-pane {
+    &>div.actions-pane {
       opacity: 1;
+      display: flex;
     }
   }
 }
@@ -99,12 +109,14 @@ ion-card-content {
     padding-inline: 20px;
     padding-bottom: 0;
   }
+
   &:not(.no-photo) {
     h6 {
       margin-top: 15px;
       font-size: 11px;
       font-weight: 600;
     }
+
     div {
       font-size: 10px;
       font-weight: normal;
@@ -114,6 +126,7 @@ ion-card-content {
   h6 {
     margin-block: 5px;
   }
+
   div {
     display: flex;
     flex-direction: column;
@@ -121,5 +134,3 @@ ion-card-content {
     font-weight: 600;
   }
 }
-
-
