user page basic setup

--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -1,13 +1,20 @@
 <app-header>
   <p title>Особиста сторінка</p>
+  <ion-button right-button slot="icon-only" color="primary" id="user-settings-bottomsheet">
+    <ion-icon name="settings-outline"></ion-icon>
+  </ion-button>
 </app-header>
 
 <ion-content>
-  <div class="user-header">
-    <div class="user-info"></div>
-    <ion-button slot="icon-only" color="secondary" id="user-settings-bottomsheet">
-      <ion-icon name="settings-outline"></ion-icon>
-    </ion-button>
+  <div class="user-header" *ngIf="(user$ | async) && currentUser">
+
+    <ion-avatar>
+      <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+    </ion-avatar>
+    <div class="user-info-details">
+      <p>Email: {{currentUser.email}}</p>
+    </div>
+
   </div>
   <ng-container *ngTemplateOutlet="settingsBottomsheet"></ng-container>
 </ion-content>
@@ -28,7 +35,7 @@
             <ion-label>{{option.title}}</ion-label>
           </ion-item>
         </ion-list>
-        
+
       </ion-content>
     </ng-template>
   </ion-modal>
